--- a/style_lab14.css
+++ b/style_lab14.css
@@ -3,3 +3,23 @@
 
     font-family:Arial, Helvetica, sans-serif
 }
+th, td {
+    padding: 8px;
+    text-align: left;
+    width: 200px;
+}
+tr {
+    margin-bottom: 100px;
+}
+input{
+    background-color: gainsboro;
+    border-radius: 5px;
+}
+button{
+    background-color: aqua;
+    border-radius: 5px;
+}
+table{
+    background-color: aquamarine;
+    border-radius: 5px;
+}
